--- a/frontend/src/chatwidget/adminchat.css
+++ b/frontend/src/chatwidget/adminchat.css
@@ -43,22 +43,23 @@
   padding: 20px;
 }
 
-.message {
+.messages {
   margin-bottom: 10px;
-  padding: 10px;
+  padding: 25px;
   border-radius: 5px;
   max-width: 70%;
+  display: flex;
 }
 .left{
   background-color: #0084ff;
   color: white;
+}
+.right{
+  background-color: #e5e5ea;
+  color: #333;
+  align-items: flex-end;
+}
 
-}
-.sent {
-  align-self: flex-end;
-  background-color: #007bff;
-  color: white;
-}
 
 .message-input {
   display: flex;
