--- a/frontend/src/components/layout/searchproduct/searchproduct.css
+++ b/frontend/src/components/layout/searchproduct/searchproduct.css
@@ -2,60 +2,62 @@
 
 /* Genel sayfa düzeni */
 .searchbar {
-              display: flex;
-              flex-direction: column;
-              align-items: self-start;
-              justify-content: space-between;
-              padding: 7px;
-              border: 1px solid #ccc;
-              border-radius: 5px;
-              position: relative;
-            }
-            
-            .searchbar-input {
-              flex: 1;
-              padding: 10px;
-              border: none;
-              outline: none;
-              border-radius: 45px;
-            }
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: self-start;
+  justify-content: space-between;
+  padding: 7px;
+  border: 1px solid #ccc;
+  border-radius: 55px;
+  position: relative;
+}
+
+.searchbar-input {
+  width: 43rem;
+  flex: 1;
+  padding: 10px;
+  border: none;
+  outline: none;
+  border-radius: 45px;
+}
 
 /* Ürün listesi stilleri */
 .searchbar-info {
-              margin-top: 0.5rem;
-              margin-left: -0.5rem;
-              z-index: 109;
-              background-color: white;
-              list-style: none;
-              padding: 0;
-              position: absolute;
-              display: none;
+  overflow: hidden;
+  width: 43rem;
+  border-radius: 45px;
+  margin-top: 0.5rem;
+  margin-left: -0.5rem;
+  z-index: 1;
+  background-color: white;
+  list-style: none;
+  position: absolute;
+  display: none;
 }
 
 
 .searchbar-info.activeD {
-              position: absolute;
-              display: block;
-              pointer-events: auto;
+  position: absolute;
+  display: block;
+  pointer-events: auto;
 }
 
 .searchbar-info li {
-              background-color: white;
-              border: 1px solid #ccc;
-              border-radius: 4px;
-              padding: 10px;
-              margin-bottom: 10px;
-              width: 100%;
-              max-width: 400px;
-              box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 45px;
+  background-color: white;
+  border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .searchbar-info h2 {
-              font-size: 18px;
-              margin: 0;
+  font-size: 18px;
+  margin: 0;
 }
 
 .searchbar-info p {
-              font-size: 14px;
-              margin: 10px 0;
+  font-size: 14px;
 }
