--- a/frontend/src/pages/customerpages/home/home.css
+++ b/frontend/src/pages/customerpages/home/home.css
@@ -66,7 +66,7 @@
   position: relative;
 }
 
-.container {
+.home-info-container {
   width: 100%;
   padding: 25px;
   margin-bottom: 36px;
@@ -75,7 +75,7 @@
   height: max-content;
   transition: all 0.5s;
 }
-.container:hover{
+.home-info-container:hover{
   transform: scale(1.1);
   transition: 0.5s;
 }
